--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An app that let's you say happy birthday to your friend in a nerdy way.",
   "main": "index.js",
   "devDependencies": {
-    "browser-sync": "^2.18.13",
-    "run-script-os": "^1.0.2"
+    "browser-sync": "^2.29.3",
+    "run-script-os": "^1.1.6"
   },
   "scripts": {
     "start": "run-script-os",
@@ -27,6 +27,5 @@
   "bugs": {
     "url": "https://github.com/faahim/happy-birthday/issues"
   },
-  "homepage": "https://github.com/faahim/happy-birthday#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/faahim/happy-birthday#readme"
 }
